
{{ $NEXT }}

0.05      2010-07-05 19:21

    - switched to Dist::Zilla
    
    - added `skip` sections to test suite to allow cross-platform testing
    
    - test suite now passes on the NodeJS platform

0.04    

    [ENHANCEMENTS]
    
        - greatly improved synchronous-ness of the dependencies loading, if the files are bundled in proper order 
    
    [API CHANGES]

    -none-

    [BUG FIXES]
    
        - fixed bug, when already loaded non-joose classes could been handled asynchronously (instead of synchronously) 

0.03    

    [ENHANCEMENTS]
    
        - implemented 'require' resource which is just a basic wrapper around the CommonJS module
    
    [API CHANGES]

    -none-

    [BUG FIXES]
    
    -none-




0.02    

    [ENHANCEMENTS]
    
    - added non-blocking NodeJS transport and materialization roles
    
    - added NodeJS package: Task.JooseX.Namespace.Depended.NodeJS
      
    - If some class don't have the dependencies, than it becomes "ready" synchronously.
      Thus, if we have a concatenated file with the inter-dependended classes, which are
      sorted in the dependency order, it will be executed synchronously
    
    [API CHANGES]

    `materialize` method of Resource now also receives the url of the loaded resource as 2nd argument
    

    [BUG FIXES]
    
    -none-
