@@ -147,10 +147,12 @@ Role('JooseX.Namespace.Depended', {
                     
                     Joose.A.each(Joose.O.wantArray(extend[propName]), function (descriptor, index) {
                         
-                        if (typeof descriptor == 'function')
-                            descriptors.push(descriptor)
+                        var descType = typeof descriptor
+                        
+                        if (descType == 'function')
+                            descriptors.push(descriptor.meta ? descriptor : descriptor())
                         else
-                            if (typeof descriptor == 'object')
+                            if (descType == 'object')
                                 if (descriptor.token)
                                     descriptors.push(eval(descriptor.token)) 
                                 else
@@ -158,7 +160,7 @@ Role('JooseX.Namespace.Depended', {
                                         descriptors.push(eval(name)) 
                                     })
                             else 
-                                if (typeof descriptor == 'string')
+                                if (descType == 'string')
                                     descriptors.push(eval(descriptor))
                                 else 
                                     throw "Wrong dependency descriptor format: " + descriptor
