@@ -117,7 +117,11 @@ use = function (dependenciesInfo, callback, scope) {
 use.paths = JooseX.Namespace.Depended.Manager.my.INC
 
 
-Joose.I.FutureClass = function (className) { return function () { return eval(className) } }
+Joose.I.FutureClass = function (className) { 
+    return function () { 
+        return eval(className) 
+    } 
+}
 
 
 /**
